tkb/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
*{
	font-family: 'Noto Sans', sans-serif;
    text-decoration: none;
    text-align: center;
	box-sizing: border-box;
	font-weight: unset;
}

html {
    scroll-behavior: smooth;
}

html::-webkit-scrollbar {
    width: 1rem;
}

html::-webkit-scrollbar-thumb {
    height: 10rem;
    background-color: #ccc;
    border: 2px solid white;
    border-radius: 6px;
}

html::-webkit-scrollbar-track {
    background-color: white;
}
body{
    background-color: #cde2f5;
}
a{
	color: #757575;
	transition: 0.2s;
}
a:hover{
	color: #7278D1;
	transition: 0.2s;
}
table{
    margin: auto;
    color: #808080;
	border-radius: 10px;
	overflow: hidden;
	box-shadow: 0 1px 2px 1px rgb(0 0 0 / 1%), 0 2px 3px 2px rgb(0 0 0 / 2%), 0 4px 15px 4px rgb(0 0 0 / 6%);
}
td{
	width: 160px;
	height: 70px;
	font-size: 16px;
	overflow: hidden;
	border-style: none;
	background-color: white;
}
.first{
	background-color: hsl(217, 73%, 62%);
	color: white;
	height: 50px;
	font-size: 18px;
}
.text{
	color: #757575;
	font-family: 'Quicksand', sans-serif;
}
@media only screen and (max-width: 700px){
	td{
		width: 160px;
		height: 70px;
		font-size: 10px;
		overflow: hidden;
		border-style: none;
		background-color: white;
	}
	.first{
		color: white;
		height: 50px;
		font-size: 13px;
	}
	#chieu{
		margin-bottom: 30px;
	}
	
}
.copy-click{
	color: #808080;
	transition: 0.1s;
}
.copy-click:hover{
	color: #7278D1;
	transition:ease-in-out 0.1s;
}
@media only screen and (min-width: 900px){
.id{
	width: 600px;
}
}
.id.first, .id.copy-click{
	font-size: 19px;
}
@media (prefers-color-scheme: dark){
	.text{
		color: #eee;
		font-family: 'Quicksand', sans-serif;
	}
	#text2{
		color: #eee;
	}
	body{
		background-color: #2B2B2B;
	}
	table{
		color: #eee;
	}
	a ,.copy-click{
		color: #eee;
	}
	td{
		background-color:  #423F3E;
	}
	.first{
		background-color: #4A47A3;
		color: #eee;
	}
	html::-webkit-scrollbar-track {
        background-color: #423F3E;
    }

    html::-webkit-scrollbar-thumb {
        height: 10rem;
        background-color: #ccc;
        border: 2px solid #423F3E;
        border-radius: 6px;
    }
}

